--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NoteBook App</title>
+    <title>Notteed</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">NoteBook</a>
+            <a class="navbar-brand" href="/">Notteed</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -100,8 +100,8 @@
                         <h5 class="card-title">${element.title}</h5>
                         <h6 class="card-subtitle mb-2 text-body-secondary">Note Description</h6>
                         <p class="card-text">${element.desc}</p>
+                        <a href="./updateNote.html?id=${element._id}" class="btn btn-warning btn-sm">Edit</a>
                         <button class="btn btn-danger btn-sm delete-note" data-id="${element._id}">Delete</button>
-                        <a href="#" class="card-link">Another link</a>
                         </div>
                     </div>`
 
